<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="add">Add</string>
    <string name="map">Map</string>
    <string name="my_cal">My Calendar</string>
    <string name="my_fav">My Favourites</string>
    <string name="my_tkcts">My Tickets</string>
    <string name="free">Free</string>
    <string name="social">Social</string>
    <string name="fb_share">Facebook Share</string>
    <string name="push_noti">Push Notification</string>
    <string name="others">Others</string>
    <string name="help_center">Help Center</string>
    <string name="privacy">Privacy</string>
    <string name="terms_condi">Terms &amp; Conditions</string>
    <string name="acc_settings">Account Settings</string>
    <string name="about_us">About Us</string>
    <string name="about_text">Milan Fashion Week is an innovative calendar that coordinates the Milanese showroom openings for sales of MAIN COLLECTION Men, women and children with the aim of responding to the changing demands of the market and an audience of industry professionals increasingly demanding.\n\nMilan Fashion Main collects in an official list of appointments exhibition and sale of the major brands of prêt-à-porter presented in the showrooms of designers and fashion companies. Two annual events : Fall ( January / February ) and Summer ( June / July ) .\n\nSupporting Milan Fashion Week, the National Chamber of Italian Fashion strengthens leadership, confirming Milan as an essential reference for the sector , both in terms of creativity and quality , and in terms of trade and business. Milan is in fact a unique worldwide with more than 1,000 showrooms (mono and multi brand ).\n\nA major media campaign requires the presence of the calendar of Milano Moda Week on the most popular Italian newspapers and magazines on foreigners, as well as banners on websites and portals of national and international information.\n\nAn effective campaign online marketing and advertising channels on YouTube, Google AdWords and Facebook strengthens the communication event. On the website of the CNMI is a large area dedicated to this event, which proves to be a great platform support for both international buyers to the showrooms participating in the initiative.\n\nYou can visit virtually every showroom , a preview of the collections presented the lookbook, download the press release and the press release.</string>
    <string name="share">Share</string>
    <string name="add_to_fav">Add to favourites</string>
    <string name="date">Date</string>
    <string name="dots">............................................................................................................................................................................................................................................................................................................................................................................................................</string>
    <string name="description">Description</string>
    <string name="free_event">Free Event</string>
    <string name="reg_now">Register Now</string>
</resources>