<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/textView1"
            style="@style/lbl_more1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social"
            android:layout_marginTop="@dimen/pad_5dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/lbl_more2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fb_share" />

             <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox"
            android:checked="true"
            android:layout_marginRight="@dimen/pad_10dp" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />
         <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/lbl_more2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/push_noti" />

             <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox"
            android:layout_marginRight="@dimen/pad_10dp"
            />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/textView1"
            style="@style/lbl_more1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:layout_marginTop="@dimen/pad_5dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/help"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_center" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/privacy"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/terms"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_condi" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/account"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_settings" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />
        <TextView
            android:id="@+id/about"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />
    </LinearLayout>

</ScrollView>
