<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/pad_10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/pad_10dp" 
            android:paddingRight="@dimen/pad_10dp"
            android:paddingTop="@dimen/pad_10dp"  >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Milan Fashion Week"
                android:textColor="@color/main_color_orange"
                android:textSize="@dimen/txt_15sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Milan, Via Orefici 7, 20123 Italy"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_14sp" />

            <LinearLayout
                android:id="@+id/da"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/main_color_orange"
                    android:textSize="@dimen/txt_15sp"
                    android:layout_marginRight="@dimen/pad_3dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/23/13   12:00AM - 3:00PM  "
                    android:textColor="@color/main_color_gray_dk"
                    android:textSize="@dimen/txt_15sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:lines="1"
            android:text="@string/dots"
            android:textSize="@dimen/txt_16sp"
            android:textStyle="bold"
            android:textColor="@color/main_color_gray" 
            />

        <Button
            style="@style/btn"
            android:id="@+id/btnDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/arrow_right_small"
            android:paddingLeft="@dimen/pad_10dp"
            android:paddingRight="@dimen/pad_10dp"
            android:paddingTop="@dimen/pad_5dp"
            android:paddingBottom="@dimen/pad_5dp"
            android:text="@string/description"
            android:textColor="@color/main_color_orange"
            android:textSize="@dimen/txt_15sp" 
            android:gravity="center_vertical|left"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:gravity="center"
            android:layout_marginTop="@dimen/pad_10dp"
            android:layout_marginBottom="@dimen/pad_10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_event"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_18sp" />

            <Button
                android:id="@+id/btnReg"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/reg_btn_bg"
                android:text="@string/reg_now"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_18sp"
                android:layout_marginLeft="@dimen/pad_10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
